--- a/package.json
+++ b/package.json
@@ -8,18 +8,19 @@
     "lint": "vue-cli-service lint"
   },
   "dependencies": {
-    "axios": "^0.19.2",
-    "core-js": "^3.6.4",
-    "register-service-worker": "^1.7.1",
     "@fortawesome/fontawesome-svg-core": "^1.2.28",
     "@fortawesome/free-solid-svg-icons": "^5.13.0",
     "@fortawesome/vue-fontawesome": "^0.1.9",
+    "axios": "^0.19.2",
+    "core-js": "^3.6.4",
+    "register-service-worker": "^1.7.1",
     "tailwindcss": "^1.2.0",
     "uuid": "^7.0.1",
     "vue": "^2.6.11",
     "vue-apollo": "^3.0.0-beta.11",
     "vue-router": "^3.1.6",
     "vue-tailwind": "^0.4.6",
+    "vuelidate": "^0.7.5",
     "vuex": "^3.1.3",
     "vuex-persist": "^2.2.0"
   },
